app/design/adminhtml/Magento/backend/web/css/source/forms/_temp.less
/* ... */
//
//  Login page form errors @todo ui - remove after validation consistency
//  _____________________________________________

[class*='admin__control-'].mage-error ~ [class*='admin__addon-']:before,
.admin__field-control > [class*='admin__control-'].mage-error {
    border-color: @field-error-control__border-color;
}

label.mage-error {
    &:extend(.admin__field-error);
}

//
//  Login page captcha reload @todo ui - remove after loader consistency
//  _____________________________________________

.page-layout-admin-login {
    .loading-mask {
        background: rgba(255,255,255,.2);
        height: 100%;
        left: 0;
        position: absolute;
        top: 0;
        width: 100%;
        z-index: @z-index-10;
    }

    .popup-loading {
        height: 149px;
        left: 50%;
        margin-left: -218px/2;
        margin-top: -149px/2;
        overflow: hidden;
        position: absolute;
        top: 50%;
        width: 218px;
    }
}

//
//  Login page captcha field @todo ui - Create new captcha markup - Change reload button
//  _____________________________________________

.page-layout-admin-login {
    .field-captcha {
        padding-left: 30px;
        vertical-align: middle;

        .captcha-reload {
            float: right;
            vertical-align: middle;
        }
    }
}

//
//  Form loader @todo ui - remove after loader consistency
//  _____________________________________________

.admin__form-loading-mask {
    background: rgba(255, 255, 255, .5);
    bottom: 0;
    left: 0;
    position: fixed;
    right: 0;
    top: 0;
    z-index: @loader-overlay__z-index;

    .spinner {
        font-size: @data-grid-spinner__size;
        left: 50%;
        margin-left: -(@data-grid-spinner__size / 2);
        margin-top: -(@data-grid-spinner__size / 2);
        position: absolute;
        top: 50%;
    }
}

//
//  Selectbox in calendar @todo ui - Remove after default select styles set
//  _____________________________________________

.ui-datepicker .ui-datepicker-title select {
    &:extend(.admin__control-select all);
}

//
//  Data grid
//  _____________________________________________

.data-grid {
    .head-massaction {
        .admin__control-select {
            min-width: 6rem;
        }
    }

    .data-grid-filters {
        td {
            border-bottom: 1px solid @color-gray84;
            padding: 1rem;
        }

        select,
        input[type='text'] {
            font-size: 1.3rem;
            height: 2.8rem;
            min-width: 5rem;
            padding: .2rem .4rem;
            width: 100%;
        }

        .admin__control-text {
            width: 100%;
        }

        select {
            background-position+: ~'calc(100% - 5px)' -37px;
            background-size+: auto;
            background-position+: 100%;
            background-size+: 18px 100%;
            background-position+: ~'calc(100% - 18px)' 0;
            background-size+: 1px 100%;
            height: 2.8rem;
            padding: .2rem 1.8rem .2rem .3rem;

            &:focus {
                background-position+: ~'calc(100% - 5px)' 11px;
                background-position+: 100%;
                background-position+: ~'calc(100% - 18px)' 0;
            }
        }

        td {
            ._has-datepicker {
                + .ui-datepicker-trigger {
                    height: 2.8rem;
                    margin-left: -3.2rem;
                    width: 2.8rem;

                    &:after {
                        line-height: 28px;
                    }
                }
            }
        }
    }

    .range-line {
        position: relative;

        + .range-line {
            margin-top: .5rem;
        }
    }

    .col-qty {
        .admin__control-text {
            &:extend(.abs-control-qty all);
        }
    }

    .field-row {
        display: inline-block;
    }
}

.mass-select-info {
    &:before {
        content: '(';
    }

    &:after {
        content: ')';
    }

    &._empty {
        display: none;
    }
}

.mass-select-wrap {
    margin-left: 1.1rem;
    margin-top: 3.3rem;
    position: absolute;
    top: 100%;

    select {
        cursor: pointer;
        height: 22px;
        left: 0;
        opacity: .01;
        position: absolute;
        top: 0;
        width: 22px;
        z-index: 2;

        + label {
            &:extend(.abs-action-default);
            height: 16px;
            line-height: 16px;
            padding: 0;
            width: 16px;
            z-index: 1;

            /**
             * @codingStandardsIgnoreStart
             */
            &:before {
                &:extend(.admin__control-checkbox + label:before);
                left: 0;
                position: absolute;
                top: 0;
            }

            &:after {
                &:extend(.action-multicheck-wrap .action-multicheck-toggle:after);
                top: 40% !important;
            }
        }

        &:focus {
            + label {
                &:after {
                    &:extend(.action-multicheck-wrap .action-multicheck-toggle._active:after);
                }
            }
        }

        &._checked {
            + label {
                &:before {
                    &:extend(.admin__control-checkbox:checked + label:before);
                }
                //  @codingStandardsIgnoreEnd
            }

            &._indeterminate {
                + label {
                    &:before {
                        content: '-';
                        font-size: 2rem;
                        line-height: .7rem;
                    }
                }
            }
        }

        &._disabled {
            display: none;

            + label {
                cursor: not-allowed;
                opacity: .6;
            }
        }
    }
}
/* ... */

